Update 17课 做卫生 课文词汇和扩展短语.md

--- a/17课 做卫生 课文词汇和扩展短语.md
+++ b/17课 做卫生 课文词汇和扩展短语.md
@@ -1,456 +1,154 @@
-脏的		！	Dirty	！	สกปรก			！	สกปรก	！	สกปรก	！	สกปรก	！	สกปรก	！	สกปรก	！	！	Dirty
+深思	！	Ponder, think deeply	！	ครุ่นคิด	！	ครุ่นคิด	！	ครุ่นคิด	！	ครุ่นคิด	！	Ponder, think deeply
 
-想，思考		！	Think	！	คิด			！	คิด	！	คิด	！	คิด	！	คิด	！	คิด	！	！	Think
+想不通	！	Cannot decide	！	คิดไม่ตก	！	คิดไม่ตก	！	คิดไม่ตก	！	คิดไม่ตก	！	Cannot decide
 
-深思		！	Ponder, think deeply	！	ครุ่นคิด			！	ครุ่นคิด	！	ครุ่นคิด	！	ครุ่นคิด	！	ครุ่นคิด	！	ครุ่นคิด	！	！	Ponder, think deeply
+恳求	！	Beg, implore	！	ขอร้อง	！	ขอร้อง	！	ขอร้อง	！	ขอร้อง	！	Beg, implore
 
-审核；考虑		！	Consider, review	！	พิจารณา			！	พิจารณา	！	พิจารณา	！	พิจารณา	！	พิจารณา	！	พิจารณา	！	！	Consider, review
+一点点	！	A little	！	น่อย	！	น่อย	！	น่อย	！	น่อย	！	A little
 
-深入思考		！	Think deeply	！	คิดอย่างลึกซึ้ง			！	คิดอย่างลึกซึ้ง	！	คิดอย่างลึกซึ้ง	！	คิดอย่างลึกซึ้ง	！	คิดอย่างลึกซึ้ง	！	คิดอย่างลึกซึ้ง	！	！	Think deeply
+一点点	！	Just a little	！	น่อยเดียว	！	น่อยเดียว	！	น่อยเดียว	！	น่อยเดียว	！	Just a little
 
-想不通		！	Cannot decide	！	คิดไม่ตก			！	คิดไม่ตก	！	คิดไม่ตก	！	คิดไม่ตก	！	คิดไม่ตก	！	คิดไม่ตก	！	！	Cannot decide
+一点点	！	A little	！	น่อยๆ	！	น่อยๆ	！	น่อยๆ	！	น่อยๆ	！	A little
 
-想 念		！	Miss, think of	！	คิดถึง			！	คิดถึง	！	คิดถึง	！	คิดถึง	！	คิดถึง	！	คิดถึง	！	！	Miss, think of
+移动，推迟	！	Move, postpone	！	เลื่อน	！	เลื่อน	！	เลื่อน	！	เลื่อน	！	Move, postpone
 
-请求		！	Request	！	ขอ			！	ขอ	！	ขอ	！	ขอ	！	ขอ	！	ขอ	！	！	Request
+延期	！	Postpone	！	เลื่อนออกไป	！	เลื่อนออกไป	！	เลื่อนออกไป	！	เลื่อนออกไป	！	Postpone
 
-恳求		！	Beg, implore	！	ขอร้อง			！	ขอร้อง	！	ขอร้อง	！	ขอร้อง	！	ขอร้อง	！	ขอร้อง	！	！	Beg, implore
+枕头	！	Pillow	！	หมอน	！	หมอน	！	หมอน	！	หมอน	！	Pillow
 
-请求你帮忙		！	Ask you to help	！	ขอให้คุณช่วย			！	ขอให้คุณช่วย	！	ขอให้คุณช่วย	！	ขอให้คุณช่วย	！	ขอให้คุณช่วย	！	ขอให้คุณช่วย	！	！	Ask you to help
+套	！	Case, cover	！	ปลอก	！	ปลอก	！	ปลอก	！	ปลอก	！	Case, cover
 
-拿，取		！	Take, get	！	เอา			！	เอา	！	เอา	！	เอา	！	เอา	！	เอา	！	！	Take, get
+换枕套	！	Change pillowcase	！	เปลี่ยนปลอกหมอน	！	เปลี่ยนปลอกหมอน	！	เปลี่ยนปลอกหมอน	！	เปลี่ยนปลอกหมอน	！	Change pillowcase
 
-带走		！	Take away	！	เอาไป			！	เอาไป	！	เอาไป	！	เอาไป	！	เอาไป	！	เอาไป	！	！	Take away
+现在	！	Now	！	เดี๋ยวนี้	！	เดี๋ยวนี้	！	เดี๋ยวนี้	！	เดี๋ยวนี้	！	Now
 
-带来		！	Bring	！	เอามา			！	เอามา	！	เอามา	！	เอามา	！	เอามา	！	เอามา	！	！	Bring
+蚊帐	！	Mosquito net	！	มุ้ง	！	มุ้ง	！	มุ้ง	！	มุ้ง	！	Mosquito net
 
-一点点		！	A little	！	น่อย			！	น่อย	！	น่อย	！	น่อย	！	น่อย	！	น่อย	！	！	A little
+蚊帐	！	Mosquito net	！	มุ้งกันยุง	！	มุ้งกันยุง	！	มุ้งกันยุง	！	มุ้งกันยุง	！	Mosquito net
 
-一点点		！	Just a little	！	น่อยเดียว			！	น่อยเดียว	！	น่อยเดียว	！	น่อยเดียว	！	น่อยเดียว	！	น่อยเดียว	！	！	Just a little
+诱人的	！	Seductive, tempting	！	ยั่วยวน	！	ยั่วยวน	！	ยั่วยวน	！	ยั่วยวน	！	Seductive, tempting
 
-一点点		！	A little	！	น่อยๆ			！	น่อยๆ	！	น่อยๆ	！	น่อยๆ	！	น่อยๆ	！	น่อยๆ	！	！	A little
+晾干	！	Dry, air-dry	！	ผึ่ง	！	ผึ่ง	！	ผึ่ง	！	ผึ่ง	！	Dry, air-dry
 
-我吃一点点就饱了		！	I eat a little and feel full	！	ฉันกินน่อยๆ ก็อิ่มแล้ว			！	ฉันกินน่อยๆ ก็อิ่มแล้ว	！	ฉันกินน่อยๆ ก็อิ่มแล้ว	！	ฉันกินน่อยๆ ก็อิ่มแล้ว	！	ฉันกินน่อยๆ ก็อิ่มแล้ว	！	ฉันกินน่อยๆ ก็อิ่มแล้ว	！	！	I eat a little and feel full
+晾衣服	！	Dry clothes	！	ผึ่งผ้า	！	ผึ่งผ้า	！	ผึ่งผ้า	！	ผึ่งผ้า	！	Dry clothes
 
-这样，像这样		！	Like this	！	ยังงี้			！	ยังงี้	！	ยังงี้	！	ยังงี้	！	ยังงี้	！	ยังงี้	！	！	Like this
+晾干	！	Dry, air-dry	！	ผึ่งให้แห้ง	！	ผึ่งให้แห้ง	！	ผึ่งให้แห้ง	！	ผึ่งให้แห้ง	！	Dry, air-dry
 
-这样		！	Like this	！	อย่างนี้			！	อย่างนี้	！	อย่างนี้	！	อย่างนี้	！	อย่างนี้	！	อย่างนี้	！	！	Like this
+阳光	！	Sunlight	！	แสงแดด	！	แสงแดด	！	แสงแดด	！	แสงแดด	！	Sunlight
 
-这样		！	Like this	！	แบบนี้			！	แบบนี้	！	แบบนี้	！	แบบนี้	！	แบบนี้	！	แบบนี้	！	！	Like this
+阴影	！	Shadow	！	เงา	！	เงา	！	เงา	！	เงา	！	Shadow
 
-春节		！	Chinese New Year	！	ตรุษจีน			！	ตรุษจีน	！	ตรุษจีน	！	ตรุษจีน	！	ตรุษจีน	！	ตรุษจีน	！	！	Chinese New Year
+擦	！	Wipe, rub	！	ถู	！	ถู	！	ถู	！	ถู	！	Wipe, rub
 
-新年		！	New Year	！	ตรุษ			！	ตรุษ	！	ตรุษ	！	ตรุษ	！	ตรุษ	！	ตรุษ	！	！	New Year
+扫，刷	！	Sweep, brush	！	ปัด	！	ปัด	！	ปัด	！	ปัด	！	Sweep, brush
 
-床		！	Bed	！	ที่นอน			！	ที่นอน	！	ที่นอน	！	ที่นอน	！	ที่นอน	！	ที่นอน	！	！	Bed
+掸灰尘	！	Dust, sweep dust	！	ปัดฝุ่น	！	ปัดฝุ่น	！	ปัดฝุ่น	！	ปัดฝุ่น	！	Dust, sweep dust
 
-移动，推迟		！	Move, postpone	！	เลื่อน			！	เลื่อน	！	เลื่อน	！	เลื่อน	！	เลื่อน	！	เลื่อน	！	！	Move, postpone
+把桌子扫干净	！	Sweep the table clean	！	ปัดให้สะอาดบนโต๊ะ	！	ปัดให้สะอาดบนโต๊ะ	！	ปัดให้สะอาดบนโต๊ะ	！	ปัดให้สะอาดบนโต๊ะ	！	Sweep the table clean
 
-延期		！	Postpone	！	เลื่อนออกไป			！	เลื่อนออกไป	！	เลื่อนออกไป	！	เลื่อนออกไป	！	เลื่อนออกไป	！	เลื่อนออกไป	！	！	Postpone
+多年	！	For many years	！	ยาวนานหลายปี	！	ยาวนานหลายปี	！	ยาวนานหลายปี	！	ยาวนานหลายปี	！	For many years
 
-延时		！	Delay the time	！	เลื่อนเวลา			！	เลื่อนเวลา	！	เลื่อนเวลา	！	เลื่อนเวลา	！	เลื่อนเวลา	！	เลื่อนเวลา	！	！	Delay the time
+窗玻璃	！	Window pane	！	บานหน้าต่าง	！	บานหน้าต่าง	！	บานหน้าต่าง	！	บานหน้าต่าง	！	Window pane
 
-推迟会议		！	Postpone the meeting	！	เลื่อนการประชุม			！	เลื่อนการประชุม	！	เลื่อนการประชุม	！	เลื่อนการประชุม	！	เลื่อนการประชุม	！	เลื่อนการประชุม	！	！	Postpone the meeting
+窗户	！	Window	！	หน้าต่าง	！	หน้าต่าง	！	หน้าต่าง	！	หน้าต่าง	！	Window
 
-枕头		！	Pillow	！	หมอน			！	หมอน	！	หมอน	！	หมอน	！	หมอน	！	หมอน	！	！	Pillow
+请打开窗户	！	Please open the window	！	กรุณาเปิดบานหน้าต่าง	！	กรุณาเปิดบานหน้าต่าง	！	กรุณาเปิดบานหน้าต่าง	！	กรุณาเปิดบานหน้าต่าง	！	Please open the window
 
-套		！	Case, cover	！	ปลอก			！	ปลอก	！	ปลอก	！	ปลอก	！	ปลอก	！	ปลอก	！	！	Case, cover
+灰尘	！	Dust, dirt	！	ฝุ่น	！	ฝุ่น	！	ฝุ่น	！	ฝุ่น	！	Dust, dirt
 
-换枕套		！	Change pillowcase	！	เปลี่ยนปลอกหมอน			！	เปลี่ยนปลอกหมอน	！	เปลี่ยนปลอกหมอน	！	เปลี่ยนปลอกหมอน	！	เปลี่ยนปลอกหมอน	！	เปลี่ยนปลอกหมอน	！	！	Change pillowcase
+尘土	！	Dust	！	ธุลี	！	ธุลี	！	ธุลี	！	ธุลี	！	Dust
 
-现在		！	Now	！	เดี๋ยวนี้			！	เดี๋ยวนี้	！	เดี๋ยวนี้	！	เดี๋ยวนี้	！	เดี๋ยวนี้	！	เดี๋ยวนี้	！	！	Now
+扫灰尘	！	Sweep dust	！	กวาดฝุ่น	！	กวาดฝุ่น	！	กวาดฝุ่น	！	กวาดฝุ่น	！	Sweep dust
 
-扫帚		！	Broom	！	ไม้กวาด			！	ไม้กวาด	！	ไม้กวาด	！	ไม้กวาด	！	ไม้กวาด	！	ไม้กวาด	！	！	Broom
+相当，颇为	！	Quite, fairly	！	พอดู	！	พอดู	！	พอดู	！	พอดู	！	Quite, fairly
 
-扫		！	Sweep	！	กวาด			！	กวาด	！	กวาด	！	กวาด	！	กวาด	！	กวาด	！	！	Sweep
+排列	！	Arrange, line up	！	เรียง	！	เรียง	！	เรียง	！	เรียง	！	Arrange, line up
 
-桌子		！	Table	！	โต๊ะ			！	โต๊ะ	！	โต๊ะ	！	โต๊ะ	！	โต๊ะ	！	โต๊ะ	！	！	Table
+杂乱的	！	Messy, chaotic	！	ยุ่งเหยิง	！	ยุ่งเหยิง	！	ยุ่งเหยิง	！	ยุ่งเหยิง	！	Messy, chaotic
 
-擦		！	Wipe	！	เช็ด			！	เช็ด	！	เช็ด	！	เช็ด	！	เช็ด	！	เช็ด	！	！	Wipe
+整理桌子	！	Organize the table	！	จัดโต๊ะ	！	จัดโต๊ะ	！	จัดโต๊ะ	！	จัดโต๊ะ	！	Organize the table
 
-擦桌子		！	Wipe the table	！	เช็ดโต๊ะ			！	เช็ดโต๊ะ	！	เช็ดโต๊ะ	！	เช็ดโต๊ะ	！	เช็ดโต๊ะ	！	เช็ดโต๊ะ	！	！	Wipe the table
+人们	！	People	！	ผู้คน	！	ผู้คน	！	ผู้คน	！	ผู้คน	！	People
 
-蚊帐		！	Mosquito net	！	มุ้ง			！	มุ้ง	！	มุ้ง	！	มุ้ง	！	มุ้ง	！	มุ้ง	！	！	Mosquito net
+拥挤的；繁忙的	！	Crowded, bustling	！	พลุกพล่าน	！	พลุกพล่าน	！	พลุกพล่าน	！	พลุกพล่าน	！	Crowded, bustling
 
-蚊帐		！	Mosquito net	！	มุ้งกันยุง			！	มุ้งกันยุง	！	มุ้งกันยุง	！	มุ้งกันยุง	！	มุ้งกันยุง	！	มุ้งกันยุง	！	！	Mosquito net
+人来人往	！	Crowded people, busy people	！	ผู้คนพลุกพล่าน	！	ผู้คนพลุกพล่าน	！	ผู้คนพลุกพล่าน	！	ผู้คนพลุกพล่าน	！	Crowded people, busy people
 
-引诱，诱惑		！	Lure, tempt	！	อ่อย			！	อ่อย	！	อ่อย	！	อ่อย	！	อ่อย	！	อ่อย	！	！	Lure, tempt
+回答正确	！	Answer correctly	！	ตอบถูก	！	ตอบถูก	！	ตอบถูก	！	ตอบถูก	！	Answer correctly
 
-吸引人的		！	Attract, tempt	！	ล่อใจ			！	ล่อใจ	！	ล่อใจ	！	ล่อใจ	！	ล่อใจ	！	ล่อใจ	！	！	Attract, tempt
+按照顺序排列	！	Arrange in order	！	จัดเรียงตามลำดับ	！	จัดเรียงตามลำดับ	！	จัดเรียงตามลำดับ	！	จัดเรียงตามลำดับ	！	Arrange in order
 
-诱人的		！	Seductive, tempting	！	ยั่วยวน			！	ยั่วยวน	！	ยั่วยวน	！	ยั่วยวน	！	ยั่วยวน	！	ยั่วยวน	！	！	Seductive, tempting
+错过机会	！	Miss the opportunity	！	พลาดโอกาส	！	พลาดโอกาส	！	พลาดโอกาส	！	พลาดโอกาส	！	Miss the opportunity
 
-她诱惑那个男人		！	She tempted that man	！	เธออ่อยผู้ชายคนนั้น			！	เธออ่อยผู้ชายคนนั้น	！	เธออ่อยผู้ชายคนนั้น	！	เธออ่อยผู้ชายคนนั้น	！	เธออ่อยผู้ชายคนนั้น	！	เธออ่อยผู้ชายคนนั้น	！	！	She tempted that man
+角落	！	Corner, nook	！	ซอก	！	ซอก	！	ซอก	！	ซอก	！	Corner, nook
 
-打扫，扫		！	Sweep	！	กวาด			！	กวาด	！	กวาด	！	กวาด	！	กวาด	！	กวาด	！	！	Sweep
+藏在角落	！	Hide in the corner	！	ซ่อนในซอก	！	ซ่อนในซอก	！	ซ่อนในซอก	！	ซ่อนในซอก	！	Hide in the corner
 
-扫地		！	Sweep the floor	！	กวาดพื้น			！	กวาดพื้น	！	กวาดพื้น	！	กวาดพื้น	！	กวาดพื้น	！	กวาดพื้น	！	！	Sweep the floor
+新的	！	New	！	ใหม่	！	ใหม่	！	ใหม่	！	ใหม่	！	New
 
-晾干		！	Dry, air-dry	！	ผึ่ง			！	ผึ่ง	！	ผึ่ง	！	ผึ่ง	！	ผึ่ง	！	ผึ่ง	！	！	Dry, air-dry
+崭新的	！	Brand new, pristine	！	ใหม่เอี่ยม	！	ใหม่เอี่ยม	！	ใหม่เอี่ยม	！	ใหม่เอี่ยม	！	Brand new, pristine
 
-晾衣服		！	Dry clothes	！	ผึ่งผ้า			！	ผึ่งผ้า	！	ผึ่งผ้า	！	ผึ่งผ้า	！	ผึ่งผ้า	！	ผึ่งผ้า	！	！	Dry clothes
+后来	！	Later	！	ทีหลัง	！	ทีหลัง	！	ทีหลัง	！	ทีหลัง	！	Later
 
-晾干		！	Dry, air-dry	！	ผึ่งให้แห้ง			！	ผึ่งให้แห้ง	！	ผึ่งให้แห้ง	！	ผึ่งให้แห้ง	！	ผึ่งให้แห้ง	！	ผึ่งให้แห้ง	！	！	Dry, air-dry
+在…下面	！	Below	！	ล่าง	！	ล่าง	！	ล่าง	！	ล่าง	！	Below
 
-工具		！	Tool	！	เครื่องมือ			！	เครื่องมือ	！	เครื่องมือ	！	เครื่องมือ	！	เครื่องมือ	！	เครื่องมือ	！	！	Tool
+之后	！	After	！	ภายหลัง	！	ภายหลัง	！	ภายหลัง	！	ภายหลัง	！	After
 
-家电		！	Electrical appliances	！	เครื่องใช้ไฟฟ้า			！	เครื่องใช้ไฟฟ้า	！	เครื่องใช้ไฟฟ้า	！	เครื่องใช้ไฟฟ้า	！	เครื่องใช้ไฟฟ้า	！	เครื่องใช้ไฟฟ้า	！	！	Electrical appliances
+这次之后	！	After this time	！	ทีหลังนี้	！	ทีหลังนี้	！	ทีหลังนี้	！	ทีหลังนี้	！	After this time
 
-抹布		！	Rag	！	ผ้าขี้ริ้ว			！	ผ้าขี้ริ้ว	！	ผ้าขี้ริ้ว	！	ผ้าขี้ริ้ว	！	ผ้าขี้ริ้ว	！	ผ้าขี้ริ้ว	！	！	Rag
+每个角落，每个缝隙	！	Every nook and cranny	！	ทุกซอกทุกมุม	！	ทุกซอกทุกมุม	！	ทุกซอกทุกมุม	！	ทุกซอกทุกมุม	！	Every nook and cranny
 
-抹布		！	Wipe cloth	！	ผ้าเช็ด			！	ผ้าเช็ด	！	ผ้าเช็ด	！	ผ้าเช็ด	！	ผ้าเช็ด	！	ผ้าเช็ด	！	！	Wipe cloth
+水盆	！	Basin	！	กะละมัง	！	กะละมัง	！	กะละมัง	！	กะละมัง	！	Basin
 
-用抹布擦		！	Use a rag to wipe	！	ใช้ผ้าขี้ริ้วเช็ด			！	ใช้ผ้าขี้ริ้วเช็ด	！	ใช้ผ้าขี้ริ้วเช็ด	！	ใช้ผ้าขี้ริ้วเช็ด	！	ใช้ผ้าขี้ริ้วเช็ด	！	ใช้ผ้าขี้ริ้วเช็ด	！	！	Use a rag to wipe
+水盆	！	Basin	！	อ่าง	！	อ่าง	！	อ่าง	！	อ่าง	！	Basin
 
-阳光，太阳		！	Sunshine, sunlight	！	แดด			！	แดด	！	แดด	！	แดด	！	แดด	！	แดด	！	！	Sunshine, sunlight
+在水盆里面洗衣服	！	Wash clothes in the basin	！	ซักผ้าในกะละมัง	！	ซักผ้าในกะละมัง	！	ซักผ้าในกะละมัง	！	ซักผ้าในกะละมัง	！	Wash clothes in the basin
 
-阳光		！	Sunlight	！	แสงแดด			！	แสงแดด	！	แสงแดด	！	แสงแดด	！	แสงแดด	！	แสงแดด	！	！	Sunlight
+他特别为我做了饭	！	He made a special meal for me	！	เขาทำอาหารเป็นพิเศษให้ฉัน	！	เขาทำอาหารเป็นพิเศษให้ฉัน	！	เขาทำอาหารเป็นพิเศษให้ฉัน	！	เขาทำอาหารเป็นพิเศษให้ฉัน	！	He made a special meal for me
 
-阴影		！	Shadow	！	เงา			！	เงา	！	เงา	！	เงา	！	เงา	！	เงา	！	！	Shadow
+汽水	！	Soft drink	！	น้ำอัดลม	！	น้ำอัดลม	！	น้ำอัดลม	！	น้ำอัดลม	！	Soft drink
 
-强烈的阳光		！	Intense sunshine	！	แดดจัด			！	แดดจัด	！	แดดจัด	！	แดดจัด	！	แดดจัด	！	แดดจัด	！	！	Intense sunshine
+汽水瓶	！	Can of soda	！	กระป๋องน้ำอัดลม	！	กระป๋องน้ำอัดลม	！	กระป๋องน้ำอัดลม	！	กระป๋องน้ำอัดลม	！	Can of soda
 
-今天阳光很强烈		！	Today the sunlight is very strong	！	วันนี้แดดจัดมาก			！	วันนี้แดดจัดมาก	！	วันนี้แดดจัดมาก	！	วันนี้แดดจัดมาก	！	วันนี้แดดจัดมาก	！	วันนี้แดดจัดมาก	！	！	Today the sunlight is very strong
+问问题	！	Ask a question	！	ถามคำถาม	！	ถามคำถาม	！	ถามคำถาม	！	ถามคำถาม	！	Ask a question
 
-距离，范围		！	Distance, range	！	ระยะ			！	ระยะ	！	ระยะ	！	ระยะ	！	ระยะ	！	ระยะ	！	！	Distance, range
+梳头发	！	Comb hair	！	หวีผม	！	หวีผม	！	หวีผม	！	หวีผม	！	Comb hair
 
-间隔		！	Interval	！	ช่วง			！	ช่วง	！	ช่วง	！	ช่วง	！	ช่วง	！	ช่วง	！	！	Interval
+辫子	！	Braid	！	ถักเปีย	！	ถักเปีย	！	ถักเปีย	！	ถักเปีย	！	Braid
 
-路程		！	Distance (travel)	！	ระยะทาง			！	ระยะทาง	！	ระยะทาง	！	ระยะทาง	！	ระยะทาง	！	ระยะทาง	！	！	Distance (travel)
+丢弃，抛掉	！	Throw away, discard	！	โละทิ้ง	！	โละทิ้ง	！	โละทิ้ง	！	โละทิ้ง	！	Throw away, discard
 
-距离远		！	Long distance	！	ระยะไกล			！	ระยะไกล	！	ระยะไกล	！	ระยะไกล	！	ระยะไกล	！	ระยะไกล	！	！	Long distance
+立刻回答	！	Answer immediately	！	ตอบทันที	！	ตอบทันที	！	ตอบทันที	！	ตอบทันที	！	Answer immediately
 
-从家到学校的路程不远		！	The distance from home to school is not far	！	ระยะทางจากบ้านถึงโรงเรียนไม่ไกล			！	ระยะทางจากบ้านถึงโรงเรียนไม่ไกล	！	ระยะทางจากบ้านถึงโรงเรียนไม่ไกล	！	ระยะทางจากบ้านถึงโรงเรียนไม่ไกล	！	ระยะทางจากบ้านถึงโรงเรียนไม่ไกล	！	ระยะทางจากบ้านถึงโรงเรียนไม่ไกล	！	！	The distance from home to school is not far
+化妆品	！	Cosmetics	！	เครื่องสําอาง	！	เครื่องสําอาง	！	เครื่องสําอาง	！	เครื่องสําอาง	！	Cosmetics
 
-擦，清洁		！	Wipe, clean	！	เช็ด			！	เช็ด	！	เช็ด	！	เช็ด	！	เช็ด	！	เช็ด	！	！	Wipe, clean
+化妆品	！	Cosmetics	！	สำอาง	！	สำอาง	！	สำอาง	！	สำอาง	！	Cosmetics
 
-擦		！	Wipe, rub	！	ถู			！	ถู	！	ถู	！	ถู	！	ถู	！	ถู	！	！	Wipe, rub
+贴着	！	Stick, paste	！	แปะ	！	แปะ	！	แปะ	！	แปะ	！	Stick, paste
 
-擦桌子		！	Wipe the table	！	เช็ดโต๊ะ			！	เช็ดโต๊ะ	！	เช็ดโต๊ะ	！	เช็ดโต๊ะ	！	เช็ดโต๊ะ	！	เช็ดโต๊ะ	！	！	Wipe the table
+脱落	！	Fall off, come off	！	หลุด	！	หลุด	！	หลุด	！	หลุด	！	Fall off, come off
 
-擦干净		！	Wipe clean	！	เช็ดให้สะอาด			！	เช็ดให้สะอาด	！	เช็ดให้สะอาด	！	เช็ดให้สะอาด	！	เช็ดให้สะอาด	！	เช็ดให้สะอาด	！	！	Wipe clean
+传统	！	Tradition	！	ประเพณี	！	ประเพณี	！	ประเพณี	！	ประเพณี	！	Tradition
 
-请把桌子擦干净		！	Please wipe the table clean	！	กรุณาเช็ดโต๊ะให้สะอาด			！	กรุณาเช็ดโต๊ะให้สะอาด	！	กรุณาเช็ดโต๊ะให้สะอาด	！	กรุณาเช็ดโต๊ะให้สะอาด	！	กรุณาเช็ดโต๊ะให้สะอาด	！	กรุณาเช็ดโต๊ะให้สะอาด	！	！	Please wipe the table clean
+传承传统	！	Continue the tradition	！	สืบสานประเพณี	！	สืบสานประเพณี	！	สืบสานประเพณี	！	สืบสานประเพณี	！	Continue the tradition
 
-旁边，侧面		！	Side, next to	！	ข้าง			！	ข้าง	！	ข้าง	！	ข้าง	！	ข้าง	！	ข้าง	！	！	Side, next to
+杂乱，凌乱	！	Messy, cluttered	！	เกะกะ	！	เกะกะ	！	เกะกะ	！	เกะกะ	！	Messy, cluttered
 
-房子旁边		！	Next to the house	！	ข้างบ้าน			！	ข้างบ้าน	！	ข้างบ้าน	！	ข้างบ้าน	！	ข้างบ้าน	！	ข้างบ้าน	！	！	Next to the house
+整齐的	！	Neat, organized	！	เป็นระเบียบ	！	เป็นระเบียบ	！	เป็นระเบียบ	！	เป็นระเบียบ	！	Neat, organized
 
-坐在旁边		！	Sit next to	！	นั่งข้างๆ			！	นั่งข้างๆ	！	นั่งข้างๆ	！	นั่งข้างๆ	！	นั่งข้างๆ	！	นั่งข้างๆ	！	！	Sit next to
+碍眼	！	Unattractive, unsightly	！	เกะกะตา	！	เกะกะตา	！	เกะกะตา	！	เกะกะตา	！	Unattractive, unsightly
 
-我坐在朋友旁边		！	I sit next to my friend	！	ฉันนั่งข้างๆ เพื่อน			！	ฉันนั่งข้างๆ เพื่อน	！	ฉันนั่งข้างๆ เพื่อน	！	ฉันนั่งข้างๆ เพื่อน	！	ฉันนั่งข้างๆ เพื่อน	！	ฉันนั่งข้างๆ เพื่อน	！	！	I sit next to my friend
+立刻开始做	！	Start immediately	！	ลงมือทำทันที	！	ลงมือทำทันที	！	ลงมือทำทันที	！	ลงมือทำทันที	！	Start immediately
 
-扫，刷		！	Sweep, brush	！	ปัด			！	ปัด	！	ปัด	！	ปัด	！	ปัด	！	ปัด	！	！	Sweep, brush
+庆祝	！	Celebrate	！	ฉลอง	！	ฉลอง	！	ฉลอง	！	ฉลอง	！	Celebrate
 
-扫		！	Sweep	！	กวาด			！	กวาด	！	กวาด	！	กวาด	！	กวาด	！	กวาด	！	！	Sweep
+庆祝新年	！	Celebrate New Year’s Day	！	ฉลองวันขึ้นปีใหม่	！	ฉลองวันขึ้นปีใหม่	！	ฉลองวันขึ้นปีใหม่	！	ฉลองวันขึ้นปีใหม่	！	Celebrate New Year’s Day
 
-掸灰尘		！	Dust, sweep dust	！	ปัดฝุ่น			！	ปัดฝุ่น	！	ปัดฝุ่น	！	ปัดฝุ่น	！	ปัดฝุ่น	！	ปัดฝุ่น	！	！	Dust, sweep dust
+庆祝活动	！	Celebration event	！	งานฉลอง	！	งานฉลอง	！	งานฉลอง	！	งานฉลอง	！	Celebration event
 
-把桌子扫干净		！	Sweep the table clean	！	ปัดให้สะอาดบนโต๊ะ			！	ปัดให้สะอาดบนโต๊ะ	！	ปัดให้สะอาดบนโต๊ะ	！	ปัดให้สะอาดบนโต๊ะ	！	ปัดให้สะอาดบนโต๊ะ	！	ปัดให้สะอาดบนโต๊ะ	！	！	Sweep the table clean
+泼水节	！	Songkran Festival (Thai New Year)	！	เทศกาลสงกรานต์	！	เทศกาลสงกรานต์	！	เทศกาลสงกรานต์	！	เทศกาลสงกรานต์	！	Songkran Festival (Thai New Year)
 
-长久，长期		！	Long, lengthy	！	ยาวนาน			！	ยาวนาน	！	ยาวนาน	！	ยาวนาน	！	ยาวนาน	！	ยาวนาน	！	！	Long, lengthy
+哪里	！	Where	！	ตรงไหน	！	ตรงไหน	！	ตรงไหน	！	ตรงไหน	！	Where
 
-多年		！	For many years	！	ยาวนานหลายปี			！	ยาวนานหลายปี	！	ยาวนานหลายปี	！	ยาวนานหลายปี	！	ยาวนานหลายปี	！	ยาวนานหลายปี	！	！	For many years
+你哪里痛？	！	Where does it hurt?	！	เธอเจ็บตรงไหน	！	เธอเจ็บตรงไหน	！	เธอเจ็บตรงไหน	！	เธอเจ็บตรงไหน	！	Where does it hurt?<img width="764" alt="image" src="https://github.com/user-attachments/assets/36cd5af8-febc-4a4a-b356-ddf98896b889" />
 
-长时间等待		！	Waited for a long time	！	รอคอยอย่างยาวนาน			！	รอคอยอย่างยาวนาน	！	รอคอยอย่างยาวนาน	！	รอคอยอย่างยาวนาน	！	รอคอยอย่างยาวนาน	！	รอคอยอย่างยาวนาน	！	！	Waited for a long time
-
-我们的爱情持续了很多年		！	Our love lasted for many years	！	ความรักของเรายาวนานหลายปี			！	ความรักของเรายาวนานหลายปี	！	ความรักของเรายาวนานหลายปี	！	ความรักของเรายาวนานหลายปี	！	ความรักของเรายาวนานหลายปี	！	ความรักของเรายาวนานหลายปี	！	！	Our love lasted for many years
-
-窗玻璃		！	Window pane	！	บานหน้าต่าง			！	บานหน้าต่าง	！	บานหน้าต่าง	！	บานหน้าต่าง	！	บานหน้าต่าง	！	บานหน้าต่าง	！	！	Window pane
-
-窗户		！	Window	！	หน้าต่าง			！	หน้าต่าง	！	หน้าต่าง	！	หน้าต่าง	！	หน้าต่าง	！	หน้าต่าง	！	！	Window
-
-请打开窗户		！	Please open the window	！	กรุณาเปิดบานหน้าต่าง			！	กรุณาเปิดบานหน้าต่าง	！	กรุณาเปิดบานหน้าต่าง	！	กรุณาเปิดบานหน้าต่าง	！	กรุณาเปิดบานหน้าต่าง	！	กรุณาเปิดบานหน้าต่าง	！	！	Please open the window
-
-正在进行，力量		！	In progress, power	！	กําลัง			！	กําลัง	！	กําลัง	！	กําลัง	！	กําลัง	！	กําลัง	！	！	In progress, power
-
-正在		！	In progress, currently	！	…อยู่			！	…อยู่	！	…อยู่	！	…อยู่	！	…อยู่	！	…อยู่	！	！	In progress, currently
-
-正在		！	In progress, currently	！	กําลัง…อยู่			！	กําลัง…อยู่	！	กําลัง…อยู่	！	กําลัง…อยู่	！	กําลัง…อยู่	！	กําลัง…อยู่	！	！	In progress, currently
-
-即将去		！	About to go	！	กำลังจะไป			！	กำลังจะไป	！	กำลังจะไป	！	กำลังจะไป	！	กำลังจะไป	！	กำลังจะไป	！	！	About to go
-
-灰尘		！	Dust, dirt	！	ฝุ่น			！	ฝุ่น	！	ฝุ่น	！	ฝุ่น	！	ฝุ่น	！	ฝุ่น	！	！	Dust, dirt
-
-灰尘		！	Dust, dirt	！	ฝุ่น			！	ฝุ่น	！	ฝุ่น	！	ฝุ่น	！	ฝุ่น	！	ฝุ่น	！	！	Dust, dirt
-
-尘土		！	Dust	！	ธุลี			！	ธุลี	！	ธุลี	！	ธุลี	！	ธุลี	！	ธุลี	！	！	Dust
-
-扫灰尘		！	Sweep dust	！	กวาดฝุ่น			！	กวาดฝุ่น	！	กวาดฝุ่น	！	กวาดฝุ่น	！	กวาดฝุ่น	！	กวาดฝุ่น	！	！	Sweep dust
-
-相当，颇为		！	Quite, fairly	！	พอดู			！	พอดู	！	พอดู	！	พอดู	！	พอดู	！	พอดู	！	！	Quite, fairly
-
-窗户		！	Window	！	หน้าต่าง			！	หน้าต่าง	！	หน้าต่าง	！	หน้าต่าง	！	หน้าต่าง	！	หน้าต่าง	！	！	Window
-
-大规模地，重要地		！	In a big way, significantly	！	เป็นการใหญ่			！	เป็นการใหญ่	！	เป็นการใหญ่	！	เป็นการใหญ่	！	เป็นการใหญ่	！	เป็นการใหญ่	！	！	In a big way, significantly
-
-大规模举办活动		！	Organize the event on a large scale	！	จัดงานเป็นการใหญ่			！	จัดงานเป็นการใหญ่	！	จัดงานเป็นการใหญ่	！	จัดงานเป็นการใหญ่	！	จัดงานเป็นการใหญ่	！	จัดงานเป็นการใหญ่	！	！	Organize the event on a large scale
-
-这场婚礼大规模举办		！	This wedding was organized on a large scale	！	งานแต่งงานนี้จัดเป็นการใหญ่			！	งานแต่งงานนี้จัดเป็นการใหญ่	！	งานแต่งงานนี้จัดเป็นการใหญ่	！	งานแต่งงานนี้จัดเป็นการใหญ่	！	งานแต่งงานนี้จัดเป็นการใหญ่	！	งานแต่งงานนี้จัดเป็นการใหญ่	！	！	This wedding was organized on a large scale
-
-安排，整理		！	Organize, arrange	！	จัด			！	จัด	！	จัด	！	จัด	！	จัด	！	จัด	！	！	Organize, arrange
-
-排列		！	Arrange, line up	！	เรียง			！	เรียง	！	เรียง	！	เรียง	！	เรียง	！	เรียง	！	！	Arrange, line up
-
-杂乱的		！	Messy, chaotic	！	ยุ่งเหยิง			！	ยุ่งเหยิง	！	ยุ่งเหยิง	！	ยุ่งเหยิง	！	ยุ่งเหยิง	！	ยุ่งเหยิง	！	！	Messy, chaotic
-
-整理桌子		！	Organize the table	！	จัดโต๊ะ			！	จัดโต๊ะ	！	จัดโต๊ะ	！	จัดโต๊ะ	！	จัดโต๊ะ	！	จัดโต๊ะ	！	！	Organize the table
-
-人们		！	People	！	ผู้คน			！	ผู้คน	！	ผู้คน	！	ผู้คน	！	ผู้คน	！	ผู้คน	！	！	People
-
-拥挤的；繁忙的		！	Crowded, bustling	！	พลุกพล่าน			！	พลุกพล่าน	！	พลุกพล่าน	！	พลุกพล่าน	！	พลุกพล่าน	！	พลุกพล่าน	！	！	Crowded, bustling
-
-人来人往		！	Crowded people, busy people	！	ผู้คนพลุกพล่าน			！	ผู้คนพลุกพล่าน	！	ผู้คนพลุกพล่าน	！	ผู้คนพลุกพล่าน	！	ผู้คนพลุกพล่าน	！	ผู้คนพลุกพล่าน	！	！	Crowded people, busy people
-
-对，便宜		！	Correct, cheap	！	ถูก			！	ถูก	！	ถูก	！	ถูก	！	ถูก	！	ถูก	！	！	Correct, cheap
-
-回答正确		！	Answer correctly	！	ตอบถูก			！	ตอบถูก	！	ตอบถูก	！	ตอบถูก	！	ตอบถูก	！	ตอบถูก	！	！	Answer correctly
-
-正确		！	Correct	！	ถูกต้อง			！	ถูกต้อง	！	ถูกต้อง	！	ถูกต้อง	！	ถูกต้อง	！	ถูกต้อง	！	！	Correct
-
-全面，普遍		！	Comprehensive, all over	！	ทั่วถึง			！	ทั่วถึง	！	ทั่วถึง	！	ทั่วถึง	！	ทั่วถึง	！	ทั่วถึง	！	！	Comprehensive, all over
-
-部分		！	Part, portion	！	บางส่วน			！	บางส่วน	！	บางส่วน	！	บางส่วน	！	บางส่วน	！	บางส่วน	！	！	Part, portion
-
-遍及到每一个人		！	Reach everyone	！	ทั่วถึงทุกคน			！	ทั่วถึงทุกคน	！	ทั่วถึงทุกคน	！	ทั่วถึงทุกคน	！	ทั่วถึงทุกคน	！	ทั่วถึงทุกคน	！	！	Reach everyone
-
-服务周到		！	Comprehensive service	！	บริการทั่วถึง			！	บริการทั่วถึง	！	บริการทั่วถึง	！	บริการทั่วถึง	！	บริการทั่วถึง	！	บริการทั่วถึง	！	！	Comprehensive service
-
-整理，排列		！	Arrange, organize	！	จัดเรียง			！	จัดเรียง	！	จัดเรียง	！	จัดเรียง	！	จัดเรียง	！	จัดเรียง	！	！	Arrange, organize
-
-顺序		！	Order, sequence	！	ลำดับ			！	ลำดับ	！	ลำดับ	！	ลำดับ	！	ลำดับ	！	ลำดับ	！	！	Order, sequence
-
-按照顺序排列		！	Arrange in order	！	จัดเรียงตามลำดับ			！	จัดเรียงตามลำดับ	！	จัดเรียงตามลำดับ	！	จัดเรียงตามลำดับ	！	จัดเรียงตามลำดับ	！	จัดเรียงตามลำดับ	！	！	Arrange in order
-
-抓住机会		！	Take the opportunity	！	ถือโอกาส			！	ถือโอกาส	！	ถือโอกาส	！	ถือโอกาส	！	ถือโอกาส	！	ถือโอกาส	！	！	Take the opportunity
-
-利用机会		！	Take advantage of	！	ใช้โอกาส			！	ใช้โอกาส	！	ใช้โอกาส	！	ใช้โอกาส	！	ใช้โอกาส	！	ใช้โอกาส	！	！	Take advantage of
-
-错过机会		！	Miss the opportunity	！	พลาดโอกาส			！	พลาดโอกาส	！	พลาดโอกาส	！	พลาดโอกาส	！	พลาดโอกาส	！	พลาดโอกาส	！	！	Miss the opportunity
-
-借此机会		！	Take this opportunity	！	ถือโอกาสนี้			！	ถือโอกาสนี้	！	ถือโอกาสนี้	！	ถือโอกาสนี้	！	ถือโอกาสนี้	！	ถือโอกาสนี้	！	！	Take this opportunity
-
-地面，地板		！	Floor, ground	！	พื้น			！	พื้น	！	พื้น	！	พื้น	！	พื้น	！	พื้น	！	！	Floor, ground
-
-天花板		！	Ceiling	！	เพดาน			！	เพดาน	！	เพดาน	！	เพดาน	！	เพดาน	！	เพดาน	！	！	Ceiling
-
-打扫地面		！	Sweep the floor	！	กวาดพื้น			！	กวาดพื้น	！	กวาดพื้น	！	กวาดพื้น	！	กวาดพื้น	！	กวาดพื้น	！	！	Sweep the floor
-
-角落		！	Corner, nook	！	ซอก			！	ซอก	！	ซอก	！	ซอก	！	ซอก	！	ซอก	！	！	Corner, nook
-
-藏在角落		！	Hide in the corner	！	ซ่อนในซอก			！	ซ่อนในซอก	！	ซ่อนในซอก	！	ซ่อนในซอก	！	ซ่อนในซอก	！	ซ่อนในซอก	！	！	Hide in the corner
-
-新的		！	New	！	ใหม่			！	ใหม่	！	ใหม่	！	ใหม่	！	ใหม่	！	ใหม่	！	！	New
-
-崭新的		！	Brand new, pristine	！	ใหม่เอี่ยม			！	ใหม่เอี่ยม	！	ใหม่เอี่ยม	！	ใหม่เอี่ยม	！	ใหม่เอี่ยม	！	ใหม่เอี่ยม	！	！	Brand new, pristine
-
-                    
-东西		！	Of, belonging to	！	ของ			！	ของ	！	ของ	！	ของ	！	ของ	！	ของ	！	！	Of, belonging to
-
-家用品		！	Household items	！	ของใช้ในบ้าน			！	ของใช้ในบ้าน	！	ของใช้ในบ้าน	！	ของใช้ในบ้าน	！	ของใช้ในบ้าน	！	ของใช้ในบ้าน	！	！	Household items
-
-后来		！	Later	！	ทีหลัง			！	ทีหลัง	！	ทีหลัง	！	ทีหลัง	！	ทีหลัง	！	ทีหลัง	！	！	Later
-
-在…下面		！	Below	！	ล่าง			！	ล่าง	！	ล่าง	！	ล่าง	！	ล่าง	！	ล่าง	！	！	Below
-
-在…后面		！	Behind	！	หลัง			！	หลัง	！	หลัง	！	หลัง	！	หลัง	！	หลัง	！	！	Behind
-
-之后		！	After	！	ภายหลัง			！	ภายหลัง	！	ภายหลัง	！	ภายหลัง	！	ภายหลัง	！	ภายหลัง	！	！	After
-
-这次之后		！	After this time	！	ทีหลังนี้			！	ทีหลังนี้	！	ทีหลังนี้	！	ทีหลังนี้	！	ทีหลังนี้	！	ทีหลังนี้	！	！	After this time
-
-每个角落，每个缝隙		！	Every nook and cranny	！	ทุกซอกทุกมุม			！	ทุกซอกทุกมุม	！	ทุกซอกทุกมุม	！	ทุกซอกทุกมุม	！	ทุกซอกทุกมุม	！	ทุกซอกทุกมุม	！	！	Every nook and cranny
-
-到处		！	Everywhere	！	ทุกที่			！	ทุกที่	！	ทุกที่	！	ทุกที่	！	ทุกที่	！	ทุกที่	！	！	Everywhere
-
-水盆		！	Basin	！	กะละมัง			！	กะละมัง	！	กะละมัง	！	กะละมัง	！	กะละมัง	！	กะละมัง	！	！	Basin
-
-水盆		！	Basin	！	อ่าง			！	อ่าง	！	อ่าง	！	อ่าง	！	อ่าง	！	อ่าง	！	！	Basin
-
-在水盆里面洗衣服		！	Wash clothes in the basin	！	ซักผ้าในกะละมัง			！	ซักผ้าในกะละมัง	！	ซักผ้าในกะละมัง	！	ซักผ้าในกะละมัง	！	ซักผ้าในกะละมัง	！	ซักผ้าในกะละมัง	！	！	Wash clothes in the basin
-
-好处，益处		！	Benefit, advantage	！	ประโยชน์			！	ประโยชน์	！	ประโยชน์	！	ประโยชน์	！	ประโยชน์	！	ประโยชน์	！	！	Benefit, advantage
-
-价值		！	Value	！	คุณค่า			！	คุณค่า	！	คุณค่า	！	คุณค่า	！	คุณค่า	！	คุณค่า	！	！	Value
-
-发挥价值		！	Make use of	！	ใช้ให้เกิดประโยชน์			！	ใช้ให้เกิดประโยชน์	！	ใช้ให้เกิดประโยชน์	！	ใช้ให้เกิดประโยชน์	！	ใช้ให้เกิดประโยชน์	！	ใช้ให้เกิดประโยชน์	！	！	Make use of
-
-有用的		！	Useful	！	มีประโยชน์			！	มีประโยชน์	！	มีประโยชน์	！	มีประโยชน์	！	มีประโยชน์	！	มีประโยชน์	！	！	Useful
-
-书架		！	Bookshelf	！	ชั้นวางหนังสือ			！	ชั้นวางหนังสือ	！	ชั้นวางหนังสือ	！	ชั้นวางหนังสือ	！	ชั้นวางหนังสือ	！	ชั้นวางหนังสือ	！	！	Bookshelf
-
-书柜		！	Bookshelf	！	ตู้หนังสือ			！	ตู้หนังสือ	！	ตู้หนังสือ	！	ตู้หนังสือ	！	ตู้หนังสือ	！	ตู้หนังสือ	！	！	Bookshelf
-
-把书放在书架上		！	Put books on the shelf	！	วางหนังสือบนชั้น			！	วางหนังสือบนชั้น	！	วางหนังสือบนชั้น	！	วางหนังสือบนชั้น	！	วางหนังสือบนชั้น	！	วางหนังสือบนชั้น	！	！	Put books on the shelf
-
-特别的		！	Special	！	เป็นพิเศษ			！	เป็นพิเศษ	！	เป็นพิเศษ	！	เป็นพิเศษ	！	เป็นพิเศษ	！	เป็นพิเศษ	！	！	Special
-
-他特别为我做了饭		！	He made a special meal for me	！	เขาทำอาหารเป็นพิเศษให้ฉัน			！	เขาทำอาหารเป็นพิเศษให้ฉัน	！	เขาทำอาหารเป็นพิเศษให้ฉัน	！	เขาทำอาหารเป็นพิเศษให้ฉัน	！	เขาทำอาหารเป็นพิเศษให้ฉัน	！	เขาทำอาหารเป็นพิเศษให้ฉัน	！	！	He made a special meal for me
-
-罐头		！	Can, tin can	！	กระบ๋อง			！	กระบ๋อง	！	กระบ๋อง	！	กระบ๋อง	！	กระบ๋อง	！	กระบ๋อง	！	！	Can, tin can
-
-瓶子		！	Bottle	！	ขวด			！	ขวด	！	ขวด	！	ขวด	！	ขวด	！	ขวด	！	！	Bottle
-
-汽水		！	Soft drink	！	น้ำอัดลม			！	น้ำอัดลม	！	น้ำอัดลม	！	น้ำอัดลม	！	น้ำอัดลม	！	น้ำอัดลม	！	！	Soft drink
-
-汽水瓶		！	Can of soda	！	กระป๋องน้ำอัดลม			！	กระป๋องน้ำอัดลม	！	กระป๋องน้ำอัดลม	！	กระป๋องน้ำอัดลม	！	กระป๋องน้ำอัดลม	！	กระป๋องน้ำอัดลม	！	！	Can of soda
-
-普通的，常见的		！	Ordinary, normal	！	ธรรมดา			！	ธรรมดา	！	ธรรมดา	！	ธรรมดา	！	ธรรมดา	！	ธรรมดา	！	！	Ordinary, normal
-
-图片，形式		！	Picture, form	！	รูป			！	รูป	！	รูป	！	รูป	！	รูป	！	รูป	！	！	Picture, form
-
-图像		！	Image	！	ภาพ			！	ภาพ	！	ภาพ	！	ภาพ	！	ภาพ	！	ภาพ	！	！	Image
-
-照片		！	Photograph	！	รูปถ่าย			！	รูปถ่าย	！	รูปถ่าย	！	รูปถ่าย	！	รูปถ่าย	！	รูปถ่าย	！	！	Photograph
-
-拍照		！	Take a picture	！	ถ่ายรูป			！	ถ่ายรูป	！	ถ่ายรูป	！	ถ่ายรูป	！	ถ่ายรูป	！	ถ่ายรูป	！	！	Take a picture
-
-无用的		！	Useless	！	ใช้ประโยชน์ใม่ได้			！	ใช้ประโยชน์ใม่ได้	！	ใช้ประโยชน์ใม่ได้	！	ใช้ประโยชน์ใม่ได้	！	ใช้ประโยชน์ใม่ได้	！	ใช้ประโยชน์ใม่ได้	！	！	Useless
-
-无用的		！	Useless	！	ไร้ประโยชน์			！	ไร้ประโยชน์	！	ไร้ประโยชน์	！	ไร้ประโยชน์	！	ไร้ประโยชน์	！	ไร้ประโยชน์	！	！	Useless
-
-这个没有用的东西		！	Useless item	！	ของที่ใช้ประโยชน์ไม่ได้			！	ของที่ใช้ประโยชน์ไม่ได้	！	ของที่ใช้ประโยชน์ไม่ได้	！	ของที่ใช้ประโยชน์ไม่ได้	！	ของที่ใช้ประโยชน์ไม่ได้	！	ของที่ใช้ประโยชน์ไม่ได้	！	！	Useless item
-
-牙刷		！	Toothbrush	！	แปรงสีพัน			！	แปรงสีพัน	！	แปรงสีพัน	！	แปรงสีพัน	！	แปรงสีพัน	！	แปรงสีพัน	！	！	Toothbrush
-
-视野，景色		！	View	！	วิว			！	วิว	！	วิว	！	วิว	！	วิว	！	วิว	！	！	View
-
-海景		！	Sea view	！	วิวทะเล			！	วิวทะเล	！	วิวทะเล	！	วิวทะเล	！	วิวทะเล	！	วิวทะเล	！	！	Sea view
-
-欣赏风景		！	Enjoy the view	！	ชมวิว			！	ชมวิว	！	ชมวิว	！	ชมวิว	！	ชมวิว	！	ชมวิว	！	！	Enjoy the view
-
-问		！	Ask	！	ถาม			！	ถาม	！	ถาม	！	ถาม	！	ถาม	！	ถาม	！	！	Ask
-
-询问		！	Inquire	！	สอบถาม			！	สอบถาม	！	สอบถาม	！	สอบถาม	！	สอบถาม	！	สอบถาม	！	！	Inquire
-
-问问题		！	Ask a question	！	ถามคำถาม			！	ถามคำถาม	！	ถามคำถาม	！	ถามคำถาม	！	ถามคำถาม	！	ถามคำถาม	！	！	Ask a question
-
-梳子		！	Comb	！	หวี			！	หวี	！	หวี	！	หวี	！	หวี	！	หวี	！	！	Comb
-
-梳子		！	Hairbrush	！	แปรงผม			！	แปรงผม	！	แปรงผม	！	แปรงผม	！	แปรงผม	！	แปรงผม	！	！	Hairbrush
-
-梳头发		！	Comb hair	！	หวีผม			！	หวีผม	！	หวีผม	！	หวีผม	！	หวีผม	！	หวีผม	！	！	Comb hair
-
-刘海儿		！	Bangs	！	หน้าม้า			！	หน้าม้า	！	หน้าม้า	！	หน้าม้า	！	หน้าม้า	！	หน้าม้า	！	！	Bangs
-
-辫子		！	Braid	！	ถักเปีย			！	ถักเปีย	！	ถักเปีย	！	ถักเปีย	！	ถักเปีย	！	ถักเปีย	！	！	Braid
-
-丢弃，抛掉		！	Throw away, discard	！	โละทิ้ง			！	โละทิ้ง	！	โละทิ้ง	！	โละทิ้ง	！	โละทิ้ง	！	โละทิ้ง	！	！	Throw away, discard
-
-丢弃		！	Throw away	！	ทิ้ง			！	ทิ้ง	！	ทิ้ง	！	ทิ้ง	！	ทิ้ง	！	ทิ้ง	！	！	Throw away
-
-垃圾桶		！	Trash can	！	ถังขยะ			！	ถังขยะ	！	ถังขยะ	！	ถังขยะ	！	ถังขยะ	！	ถังขยะ	！	！	Trash can
-
-保留		！	Keep	！	เก็บ			！	เก็บ	！	เก็บ	！	เก็บ	！	เก็บ	！	เก็บ	！	！	Keep
-
-丢掉旧东西		！	Throw away old things	！	โละทิ้งของเก่า			！	โละทิ้งของเก่า	！	โละทิ้งของเก่า	！	โละทิ้งของเก่า	！	โละทิ้งของเก่า	！	โละทิ้งของเก่า	！	！	Throw away old things
-
-风景画		！	Scenic view	！	รูปวิว			！	รูปวิว	！	รูปวิว	！	รูปวิว	！	รูปวิว	！	รูปวิว	！	！	Scenic view
-
-风景画		！	Scenic picture	！	ภาพวิว			！	ภาพวิว	！	ภาพวิว	！	ภาพวิว	！	ภาพวิว	！	ภาพวิว	！	！	Scenic picture
-
-山景画		！	Mountain scenic view	！	รูปวิวภูเขา			！	รูปวิวภูเขา	！	รูปวิวภูเขา	！	รูปวิวภูเขา	！	รูปวิวภูเขา	！	รูปวิวภูเขา	！	！	Mountain scenic view
-
-回答		！	Answer	！	ตอบ			！	ตอบ	！	ตอบ	！	ตอบ	！	ตอบ	！	ตอบ	！	！	Answer
-
-解答		！	Solve, fix	！	แก้			！	แก้	！	แก้	！	แก้	！	แก้	！	แก้	！	！	Solve, fix
-
-回答问题		！	Answer the question	！	ตอบคำถาม			！	ตอบคำถาม	！	ตอบคำถาม	！	ตอบคำถาม	！	ตอบคำถาม	！	ตอบคำถาม	！	！	Answer the question
-
-立刻回答		！	Answer immediately	！	ตอบทันที			！	ตอบทันที	！	ตอบทันที	！	ตอบทันที	！	ตอบทันที	！	ตอบทันที	！	！	Answer immediately
-
-化妆品		！	Cosmetics	！	เครื่องสําอาง			！	เครื่องสําอาง	！	เครื่องสําอาง	！	เครื่องสําอาง	！	เครื่องสําอาง	！	เครื่องสําอาง	！	！	Cosmetics
-
-化妆品		！	Cosmetics	！	สำอาง			！	สำอาง	！	สำอาง	！	สำอาง	！	สำอาง	！	สำอาง	！	！	Cosmetics
-
-化妆		！	Make up	！	แต่งหน้า			！	แต่งหน้า	！	แต่งหน้า	！	แต่งหน้า	！	แต่งหน้า	！	แต่งหน้า	！	！	Make up
-
-素颜		！	No makeup	！	หน้าสด			！	หน้าสด	！	หน้าสด	！	หน้าสด	！	หน้าสด	！	หน้าสด	！	！	No makeup
-
-卫生，健康		！	Health	！	อนามัย			！	อนามัย	！	อนามัย	！	อนามัย	！	อนามัย	！	อนามัย	！	！	Health
-
-保持卫生		！	Maintain hygiene	！	รักษาอนามัย			！	รักษาอนามัย	！	รักษาอนามัย	！	รักษาอนามัย	！	รักษาอนามัย	！	รักษาอนามัย	！	！	Maintain hygiene
-
-卫生巾		！	Sanitary pad	！	แผ่นอนามัย			！	แผ่นอนามัย	！	แผ่นอนามัย	！	แผ่นอนามัย	！	แผ่นอนามัย	！	แผ่นอนามัย	！	！	Sanitary pad
-
-月经杯		！	Menstrual cup	！	ถ้วยอนามัย			！	ถ้วยอนามัย	！	ถ้วยอนามัย	！	ถ้วยอนามัย	！	ถ้วยอนามัย	！	ถ้วยอนามัย	！	！	Menstrual cup
-
-附着，感染		！	Stick, attach, infected	！	ติด			！	ติด	！	ติด	！	ติด	！	ติด	！	ติด	！	！	Stick, attach, infected
-
-贴着		！	Stick, paste	！	แปะ			！	แปะ	！	แปะ	！	แปะ	！	แปะ	！	แปะ	！	！	Stick, paste
-
-脱落		！	Fall off, come off	！	หลุด			！	หลุด	！	หลุด	！	หลุด	！	หลุด	！	หลุด	！	！	Fall off, come off
-
-粘的牢固；粘的紧		！	Stick firmly	！	ติดแน่น			！	ติดแน่น	！	ติดแน่น	！	ติดแน่น	！	ติดแน่น	！	ติดแน่น	！	！	Stick firmly
-
-着迷		！	Be fascinated, be fond of	！	ติดใจ			！	ติดใจ	！	ติดใจ	！	ติดใจ	！	ติดใจ	！	ติดใจ	！	！	Be fascinated, be fond of
-
-我喜欢上了泰国菜		！	I became fond of Thai food	！	ฉันติดใจอาหารไทย			！	ฉันติดใจอาหารไทย	！	ฉันติดใจอาหารไทย	！	ฉันติดใจอาหารไทย	！	ฉันติดใจอาหารไทย	！	ฉันติดใจอาหารไทย	！	！	I became fond of Thai food
-
-跟随，按照		！	Follow, according to	！	ตาม			！	ตาม	！	ตาม	！	ตาม	！	ตาม	！	ตาม	！	！	Follow, according to
-
-紧跟着		！	Follow, track	！	ติดตาม			！	ติดตาม	！	ติดตาม	！	ติดตาม	！	ติดตาม	！	ติดตาม	！	！	Follow, track
-
-跟着来		！	Come after, follow	！	ตามมา			！	ตามมา	！	ตามมา	！	ตามมา	！	ตามมา	！	ตามมา	！	！	Come after, follow
-
-按照命令		！	According to the order	！	ตามคำสั่ง			！	ตามคำสั่ง	！	ตามคำสั่ง	！	ตามคำสั่ง	！	ตามคำสั่ง	！	ตามคำสั่ง	！	！	According to the order
-
-放，放置		！	Put, place	！	วาง			！	วาง	！	วาง	！	วาง	！	วาง	！	วาง	！	！	Put, place
-
-意见		！	Opinion	！	ความเห็น			！	ความเห็น	！	ความเห็น	！	ความเห็น	！	ความเห็น	！	ความเห็น	！	！	Opinion
-
-不同意		！	Disagree	！	ไม่เห็นด้วย			！	ไม่เห็นด้วย	！	ไม่เห็นด้วย	！	ไม่เห็นด้วย	！	ไม่เห็นด้วย	！	ไม่เห็นด้วย	！	！	Disagree
-
-发表意见		！	Express an opinion	！	แสดงความเห็น			！	แสดงความเห็น	！	แสดงความเห็น	！	แสดงความเห็น	！	แสดงความเห็น	！	แสดงความเห็น	！	！	Express an opinion
-
-怎么样（口语）		！	How is it?	！	เป็นไง			！	เป็นไง	！	เป็นไง	！	เป็นไง	！	เป็นไง	！	เป็นไง	！	！	How is it?
-
-怎么样了		！	How’s it going?	！	เป็นไงบ้าง			！	เป็นไงบ้าง	！	เป็นไงบ้าง	！	เป็นไงบ้าง	！	เป็นไงบ้าง	！	เป็นไงบ้าง	！	！	How’s it going?
-
-怎么样，如何		！	How is it?	！	เป็นอย่างไร			！	เป็นอย่างไร	！	เป็นอย่างไร	！	เป็นอย่างไร	！	เป็นอย่างไร	！	เป็นอย่างไร	！	！	How is it?
-
-怎么样了		！	How have things been?	！	เป็นอย่างไรบ้าง			！	เป็นอย่างไรบ้าง	！	เป็นอย่างไรบ้าง	！	เป็นอย่างไรบ้าง	！	เป็นอย่างไรบ้าง	！	เป็นอย่างไรบ้าง	！	！	How have things been?
-
-传统		！	Tradition	！	ประเพณี			！	ประเพณี	！	ประเพณี	！	ประเพณี	！	ประเพณี	！	ประเพณี	！	！	Tradition
-
-泰国传统		！	Thai tradition	！	ประเพณีไทย			！	ประเพณีไทย	！	ประเพณีไทย	！	ประเพณีไทย	！	ประเพณีไทย	！	ประเพณีไทย	！	！	Thai tradition
-
-传承传统		！	Continue the tradition	！	สืบสานประเพณี			！	สืบสานประเพณี	！	สืบสานประเพณี	！	สืบสานประเพณี	！	สืบสานประเพณี	！	สืบสานประเพณี	！	！	Continue the tradition
-
-杂乱，凌乱		！	Messy, cluttered	！	เกะกะ			！	เกะกะ	！	เกะกะ	！	เกะกะ	！	เกะกะ	！	เกะกะ	！	！	Messy, cluttered
-
-整齐的		！	Neat, organized	！	เป็นระเบียบ			！	เป็นระเบียบ	！	เป็นระเบียบ	！	เป็นระเบียบ	！	เป็นระเบียบ	！	เป็นระเบียบ	！	！	Neat, organized
-
-碍眼		！	Unattractive, unsightly	！	เกะกะตา			！	เกะกะตา	！	เกะกะตา	！	เกะกะตา	！	เกะกะตา	！	เกะกะตา	！	！	Unattractive, unsightly
-
-动手，开始		！	Take action, start	！	ลงมือ			！	ลงมือ	！	ลงมือ	！	ลงมือ	！	ลงมือ	！	ลงมือ	！	！	Take action, start
-
-立刻开始做		！	Start immediately	！	ลงมือทำทันที			！	ลงมือทำทันที	！	ลงมือทำทันที	！	ลงมือทำทันที	！	ลงมือทำทันที	！	ลงมือทำทันที	！	！	Start immediately
-
-新年，元旦		！	New Year’s Day	！	วันขึ้นปีใหม่			！	วันขึ้นปีใหม่	！	วันขึ้นปีใหม่	！	วันขึ้นปีใหม่	！	วันขึ้นปีใหม่	！	วันขึ้นปีใหม่	！	！	New Year’s Day
-
-庆祝		！	Celebrate	！	ฉลอง			！	ฉลอง	！	ฉลอง	！	ฉลอง	！	ฉลอง	！	ฉลอง	！	！	Celebrate
-
-庆祝新年		！	Celebrate New Year’s Day	！	ฉลองวันขึ้นปีใหม่			！	ฉลองวันขึ้นปีใหม่	！	ฉลองวันขึ้นปีใหม่	！	ฉลองวันขึ้นปีใหม่	！	ฉลองวันขึ้นปีใหม่	！	ฉลองวันขึ้นปีใหม่	！	！	Celebrate New Year’s Day
-
-庆祝活动		！	Celebration event	！	งานฉลอง			！	งานฉลอง	！	งานฉลอง	！	งานฉลอง	！	งานฉลอง	！	งานฉลอง	！	！	Celebration event
-
-节日		！	Festival	！	เทศกาล			！	เทศกาล	！	เทศกาล	！	เทศกาล	！	เทศกาล	！	เทศกาล	！	！	Festival
-
-泼水节		！	Songkran Festival (Thai New Year)	！	เทศกาลสงกรานต์			！	เทศกาลสงกรานต์	！	เทศกาลสงกรานต์	！	เทศกาลสงกรานต์	！	เทศกาลสงกรานต์	！	เทศกาลสงกรานต์	！	！	Songkran Festival (Thai New Year)
-
-美丽的		！	Beautiful	！	สวย			！	สวย	！	สวย	！	สวย	！	สวย	！	สวย	！	！	Beautiful
-
-打扮的漂亮		！	Dress beautifully	！	แต่งตัวสวย			！	แต่งตัวสวย	！	แต่งตัวสวย	！	แต่งตัวสวย	！	แต่งตัวสวย	！	แต่งตัวสวย	！	！	Dress beautifully
-
-中国人		！	Chinese people	！	ชาวจีน			！	ชาวจีน	！	ชาวจีน	！	ชาวจีน	！	ชาวจีน	！	ชาวจีน	！	！	Chinese people
-
-一切，所有的事情		！	Everything	！	ทุกสิ่งทุกอย่าง			！	ทุกสิ่งทุกอย่าง	！	ทุกสิ่งทุกอย่าง	！	ทุกสิ่งทุกอย่าง	！	ทุกสิ่งทุกอย่าง	！	ทุกสิ่งทุกอย่าง	！	！	Everything
-
-认为…是…		！	Consider… as…	！	ถือ…เป็น…			！	ถือ…เป็น…	！	ถือ…เป็น…	！	ถือ…เป็น…	！	ถือ…เป็น…	！	ถือ…เป็น…	！	！	Consider… as…
-
-我把他当做朋友		！	I consider him a friend	！	ฉันถือเขาเป็นเพื่อน			！	ฉันถือเขาเป็นเพื่อน	！	ฉันถือเขาเป็นเพื่อน	！	ฉันถือเขาเป็นเพื่อน	！	ฉันถือเขาเป็นเพื่อน	！	ฉันถือเขาเป็นเพื่อน	！	！	I consider him a friend
-
-哪里		！	Where	！	ตรงไหน			！	ตรงไหน	！	ตรงไหน	！	ตรงไหน	！	ตรงไหน	！	ตรงไหน	！	！	Where
-
-你哪里痛？		！	Where does it hurt?	！	เธอเจ็บตรงไหน			！	เธอเจ็บตรงไหน	！	เธอเจ็บตรงไหน	！	เธอเจ็บตรงไหน	！	เธอเจ็บตรงไหน	！	เธอเจ็บตรงไหน	！	！	Where does it hurt?
