--- a/22课 打电话和写便条.md
+++ b/22课 打电话和写便条.md
@@ -1,158 +1,87 @@
-电话，通话	!	Telephone, phone call	!	โทรศัพท์	!	โทรศัพท์	!	โทรศัพท์	!	โทรศัพท์	!	โทรศัพท์	!
+便条，笔记	!	Note	!	โน้ต	!	โน้ต	!	โน้ต	!	โน้ต	!
 
-客户，顾客	!	Customer	!	ลูกค้า	!	ลูกค้า	!	ลูกค้า	!	ลูกค้า	!	ลูกค้า	!
+谈判，协商	!	Negotiate, discuss	!	เจรจา	!	เจรจา	!	เจรจา	!	เจรจา	!
 
-便条，笔记	!	Note	!	โน้ต	!	โน้ต	!	โน้ต	!	โน้ต	!	โน้ต	!
+故障，问题	!	Malfunction, issue	!	ขัดข้อง	!	ขัดข้อง	!	ขัดข้อง	!	ขัดข้อง	!
 
-联系，沟通	!	Contact, communicate	!	ติดต่อ	!	ติดต่อ	!	ติดต่อ	!	ติดต่อ	!	ติดต่อ	!
+电话占线	!	Line is busy	!	สายไม่ว่าง	!	สายไม่ว่าง	!	สายไม่ว่าง	!	สายไม่ว่าง	!
 
-请，劳驾	!	Please, kindly	!	กรุณา	!	กรุณา	!	กรุณา	!	กรุณา	!	กรุณา	!
+片刻，一会儿	!	A moment, a while	!	สักครู่	!	สักครู่	!	สักครู่	!	สักครู่	!
 
-谈判，协商	!	Negotiate, discuss	!	เจรจา	!	เจรจา	!	เจรจา	!	เจรจา	!	เจรจา	!
+留言，存放	!	Leave a message, deposit	!	ฝาก	!	ฝาก	!	ฝาก	!	ฝาก	!
 
-继续，延长，接通	!	Continue, extend, connect	!	ต่อ	!	ต่อ	!	ต่อ	!	ต่อ	!	ต่อ	!
+外省，乡下	!	Upcountry, outside city	!	ต่างจังหวัด	!	ต่างจังหวัด	!	ต่างจังหวัด	!	ต่างจังหวัด	!
 
-自己，自身	!	Oneself, self	!	ตนเอง	!	ตนเอง	!	ตนเอง	!	ตนเอง	!	ตนเอง	!
+紧急，突发	!	Emergency, urgent	!	ปัจจุบันทันด่วน	!	ปัจจุบันทันด่วน	!	ปัจจุบันทันด่วน	!	ปัจจุบันทันด่วน	!
 
-线路，迟到	!	Line, late	!	สาย	!	สาย	!	สาย	!	สาย	!	สาย	!
+急性肺炎	!	Acute pneumonia	!	ปอดอักเสบปัจจุบันทันด่วน	!	ปอดอักเสบปัจจุบันทันด่วน	!	ปอดอักเสบปัจจุบันทันด่วน	!	ปอดอักเสบปัจจุบันทันด่วน	!
 
-故障，问题	!	Malfunction, issue	!	ขัดข้อง	!	ขัดข้อง	!	ขัดข้อง	!	ขัดข้อง	!	ขัดข้อง	!
+通话中	!	Be on a call	!	พูดสาย	!	พูดสาย	!	พูดสาย	!	พูดสาย	!
 
-空闲的，可用的	!	Free, available	!	ว่าง	!	ว่าง	!	ว่าง	!	ว่าง	!	ว่าง	!
+邀请	!	Invite	!	ชวน	!	ชวน	!	ชวน	!	ชวน	!
 
-记下，记录	!	Write down, record	!	จด	!	จด	!	จด	!	จด	!	จด	!
+提前，预先	!	In advance	!	ล่วงหน้า	!	ล่วงหน้า	!	ล่วงหน้า	!	ล่วงหน้า	!
 
-电话占线	!	Line is busy	!	สายไม่ว่าง	!	สายไม่ว่าง	!	สายไม่ว่าง	!	สายไม่ว่าง	!	สายไม่ว่าง	!
+主治医生	!	Attending physician, primary doctor	!	เจ้าของไข้	!	เจ้าของไข้	!	เจ้าของไข้	!	เจ้าของไข้	!
 
-电话号码	!	Telephone number	!	หมายเลขโทรศัพท์	!	หมายเลขโทรศัพท์	!	หมายเลขโทรศัพท์	!	หมายเลขโทรศัพท์	!	หมายเลขโทรศัพท์	!
+由于，关于	!	Due to, regarding	!	เนื่องด้วย	!	เนื่องด้วย	!	เนื่องด้วย	!	เนื่องด้วย	!
 
-等待	!	Wait	!	รอ	!	รอ	!	รอ	!	รอ	!	รอ	!
+被雨淋	!	Got rained on	!	ถูกฝน	!	ถูกฝน	!	ถูกฝน	!	ถูกฝน	!
 
-片刻，一会儿	!	A moment, a while	!	สักครู่	!	สักครู่	!	สักครู่	!	สักครู่	!	สักครู่	!
+紧急，快速	!	Urgent, express	!	ด่วน	!	ด่วน	!	ด่วน	!	ด่วน	!
 
-学习，敬启	!	Study, address (formal)	!	เรียน	!	เรียน	!	เรียน	!	เรียน	!	เรียน	!
+请假	!	Take leave	!	ลาหยุด	!	ลาหยุด	!	ลาหยุด	!	ลาหยุด	!
 
-留言，存放	!	Leave a message, deposit	!	ฝาก	!	ฝาก	!	ฝาก	!	ฝาก	!	ฝาก	!
+诗里叻医院（泰国著名医院）	!	Siriraj Hospital	!	โรงพยาบาลศีริราช	!	โรงพยาบาลศีริราช	!	โรงพยาบาลศีริราช	!	โรงพยาบาลศีริราช	!
 
-想，回忆	!	Think, recall	!	นึก	!	นึก	!	นึก	!	นึก	!	นึก	!
+担忧，焦虑	!	Worry, concern	!	วิตก	!	วิตก	!	วิตก	!	วิตก	!
 
-没关系	!	It’s okay, never mind	!	ไม่เป็นไร	!	ไม่เป็นไร	!	ไม่เป็นไร	!	ไม่เป็นไร	!	ไม่เป็นไร	!
+灰心，气馁	!	Discouraged, give up	!	ท้อ	!	ท้อ	!	ท้อ	!	ท้อ	!
 
-发炎，感染	!	Inflamed, infection	!	อักเสบ	!	อักเสบ	!	อักเสบ	!	อักเสบ	!	อักเสบ	!
+荔枝	!	Lychee	!	ลิ้นจี่	!	ลิ้นจี่	!	ลิ้นจี่	!	ลิ้นจี่	!
 
-外省，乡下	!	Upcountry, outside city	!	ต่างจังหวัด	!	ต่างจังหวัด	!	ต่างจังหวัด	!	ต่างจังหวัด	!	ต่างจังหวัด	!
+职业，工作	!	Career, occupation	!	อาชีพ	!	อาชีพ	!	อาชีพ	!	อาชีพ	!
 
-紧急，突发	!	Emergency, urgent	!	ปัจจุบันทันด่วน	!	ปัจจุบันทันด่วน	!	ปัจจุบันทันด่วน	!	ปัจจุบันทันด่วน	!	ปัจจุบันทันด่วน	!
+SIM卡	!	SIM card	!	ซิม	!	ซิม	!	ซิม	!	ซิม	!
 
-急性肺炎	!	Acute pneumonia	!	ปอดอักเสบปัจจุบันทันด่วน	!	ปอดอักเสบปัจจุบันทันด่วน	!	ปอดอักเสบปัจจุบันทันด่วน	!	ปอดอักเสบปัจจุบันทันด่วน	!	ปอดอักเสบปัจจุบันทันด่วน	!
+味道，口感	!	Taste, flavor	!	รสชาติ	!	รสชาติ	!	รสชาติ	!	รสชาติ	!
 
-通话中	!	Be on a call	!	พูดสาย	!	พูดสาย	!	พูดสาย	!	พูดสาย	!	พูดสาย	!
+养成…习惯	!	Practice… until it becomes a habit	!	ฝึก…ให้เป็นนิสัย	!	ฝึก…ให้เป็นนิสัย	!	ฝึก…ให้เป็นนิสัย	!	ฝึก…ให้เป็นนิสัย	!
 
-持续，不断地	!	Continuously, casually	!	เรื่อย ๆ	!	เรื่อย ๆ	!	เรื่อย ๆ	!	เรื่อย ๆ	!	เรื่อย ๆ	!
+让路，避让	!	Make way, give way	!	หลีกทาง	!	หลีกทาง	!	หลีกทาง	!	หลีกทาง	!
 
-邀请	!	Invite	!	ชวน	!	ชวน	!	ชวน	!	ชวน	!	ชวน	!
+够不到	!	Can’t reach	!	เอื้อมมือไปไม่ถึง	!	เอื้อมมือไปไม่ถึง	!	เอื้อมมือไปไม่ถึง	!	เอื้อมมือไปไม่ถึง	!
 
-打电话	!	Call	!	โทร	!	โทร	!	โทร	!	โทร	!	โทร	!
+错误，失误	!	Mistake, error	!	ผิดพลาด	!	ผิดพลาด	!	ผิดพลาด	!	ผิดพลาด	!
 
-只是好玩	!	Just for fun	!	สนุก ๆ	!	สนุก ๆ	!	สนุก ๆ	!	สนุก ๆ	!	สนุก ๆ	!
+不礼貌的事	!	Impolite things	!	สิ่งที่ไม่สุภาพ	!	สิ่งที่ไม่สุภาพ	!	สิ่งที่ไม่สุภาพ	!	สิ่งที่ไม่สุภาพ	!
 
-提前，预先	!	In advance	!	ล่วงหน้า	!	ล่วงหน้า	!	ล่วงหน้า	!	ล่วงหน้า	!	ล่วงหน้า	!
+不礼貌的话	!	Impolite words	!	คําที่ไม่สุภาพ	!	คําที่ไม่สุภาพ	!	คําที่ไม่สุภาพ	!	คําที่ไม่สุภาพ	!
 
-姨，伯母，阿姨	!	Aunt, elderly woman	!	ป้า	!	ป้า	!	ป้า	!	ป้า	!	ป้า	!
+冒犯，侵犯	!	Offend, violate	!	ล่วงเกิน	!	ล่วงเกิน	!	ล่วงเกิน	!	ล่วงเกิน	!
 
-主治医生	!	Attending physician, primary doctor	!	เจ้าของไข้	!	เจ้าของไข้	!	เจ้าของไข้	!	เจ้าของไข้	!	เจ้าของไข้	!
+挤进去，穿过	!	Push through, squeeze in	!	แหวกเข้าไป	!	แหวกเข้าไป	!	แหวกเข้าไป	!	แหวกเข้าไป	!
 
-由于，关于	!	Due to, regarding	!	เนื่องด้วย	!	เนื่องด้วย	!	เนื่องด้วย	!	เนื่องด้วย	!	เนื่องด้วย	!
+赠品，礼品	!	Complimentary gift, freebie	!	ของสมนาคุณ	!	ของสมนาคุณ	!	ของสมนาคุณ	!	ของสมนาคุณ	!
 
-眼睛，外公	!	Eye, grandfather (maternal)	!	ตา	!	ตา	!	ตา	!	ตา	!	ตา	!
+以友善和好客之心	!	With kindness and hospitality	!	ด้วยอัธยาศัยไมตรี	!	ด้วยอัธยาศัยไมตรี	!	ด้วยอัธยาศัยไมตรี	!	ด้วยอัธยาศัยไมตรี	!
 
-被雨淋	!	Got rained on	!	ถูกฝน	!	ถูกฝน	!	ถูกฝน	!	ถูกฝน	!	ถูกฝน	!
+正式的，礼仪性的	!	Formal, ceremonial	!	เป็นพิธีการ	!	เป็นพิธีการ	!	เป็นพิธีการ	!	เป็นพิธีการ	!
 
-肺	!	Lung	!	ปอด	!	ปอด	!	ปอด	!	ปอด	!	ปอด	!
+商铺，店铺	!	Shops, stores	!	ห้างร้าน	!	ห้างร้าน	!	ห้างร้าน	!	ห้างร้าน	!
 
-之间，期间	!	Between, during	!	ระหว่าง	!	ระหว่าง	!	ระหว่าง	!	ระหว่าง	!	ระหว่าง	!
+银行	!	Bank	!	ธนาคาร	!	ธนาคาร	!	ธนาคาร	!	ธนาคาร	!
 
-强烈，力量	!	Strong, forceful	!	แรง	!	แรง	!	แรง	!	แรง	!	แรง	!
+在周年纪念日	!	On the anniversary	!	ในวาระครบรอบปี	!	ในวาระครบรอบปี	!	ในวาระครบรอบปี	!	ในวาระครบรอบปี	!
 
-紧急，快速	!	Urgent, express	!	ด่วน	!	ด่วน	!	ด่วน	!	ด่วน	!	ด่วน	!
+开办新业务	!	Start a new business	!	เริ่มเปิดกิจการใหม่	!	เริ่มเปิดกิจการใหม่	!	เริ่มเปิดกิจการใหม่	!	เริ่มเปิดกิจการใหม่	!
 
-请假	!	Take leave	!	ลาหยุด	!	ลาหยุด	!	ลาหยุด	!	ลาหยุด	!	ลาหยุด	!
+去世（正式用语）	!	Passed away (formal)	!	ถึงแก่กรรม	!	ถึงแก่กรรม	!	ถึงแก่กรรม	!	ถึงแก่กรรม	!
 
-什么时候	!	When	!	เมื่อไร	!	เมื่อไร	!	เมื่อไร	!	เมื่อไร	!	เมื่อไร	!
+慰问信	!	Condolence letter	!	จดหมายแสดงความเสียใจ	!	จดหมายแสดงความเสียใจ	!	จดหมายแสดงความเสียใจ	!	จดหมายแสดงความเสียใจ	!
 
-天津	!	Tianjin	!	เทียนจิน	!	เทียนจิน	!	เทียนจิน	!	เทียนจิน	!	เทียนจิน	!
+遭受损失	!	Suffer a loss	!	เกิดความสูญเสีย	!	เกิดความสูญเสีย	!	เกิดความสูญเสีย	!	เกิดความสูญเสีย	!
 
-诗里叻医院（泰国著名医院）	!	Siriraj Hospital	!	โรงพยาบาลศีริราช	!	โรงพยาบาลศีริราช	!	โรงพยาบาลศีริราช	!	โรงพยาบาลศีริราช	!	โรงพยาบาลศีริราช	!
+火灾	!	Fire, blaze	!	ไฟไหม้	!	ไฟไหม้	!	ไฟไหม้	!	ไฟไหม้	!
 
-担忧，焦虑	!	Worry, concern	!	วิตก	!	วิตก	!	วิตก	!	วิตก	!	วิตก	!
-
-半路，中途	!	Midway, halfway	!	กลางทาง	!	กลางทาง	!	กลางทาง	!	กลางทาง	!	กลางทาง	!
-
-灰心，气馁	!	Discouraged, give up	!	ท้อ	!	ท้อ	!	ท้อ	!	ท้อ	!	ท้อ	!
-
-荔枝	!	Lychee	!	ลิ้นจี่	!	ลิ้นจี่	!	ลิ้นจี่	!	ลิ้นจี่	!	ลิ้นจี่	!
-
-职业，工作	!	Career, occupation	!	อาชีพ	!	อาชีพ	!	อาชีพ	!	อาชีพ	!	อาชีพ	!
-
-SIM卡	!	SIM card	!	ซิม	!	ซิม	!	ซิม	!	ซิม	!	ซิม	!
-
-味道，口感	!	Taste, flavor	!	รสชาติ	!	รสชาติ	!	รสชาติ	!	รสชาติ	!	รสชาติ	!
-
-协会，社团	!	Association, society	!	สมาคม	!	สมาคม	!	สมาคม	!	สมาคม	!	สมาคม	!
-
-个人的，私人的	!	Personal, private	!	ส่วนตัว	!	ส่วนตัว	!	ส่วนตัว	!	ส่วนตัว	!	ส่วนตัว	!
-
-养成…习惯	!	Practice… until it becomes a habit	!	ฝึก…ให้เป็นนิสัย	!	ฝึก…ให้เป็นนิสัย	!	ฝึก…ให้เป็นนิสัย	!	ฝึก…ให้เป็นนิสัย	!	ฝึก…ให้เป็นนิสัย	!
-
-让路，避让	!	Make way, give way	!	หลีกทาง	!	หลีกทาง	!	หลีกทาง	!	หลีกทาง	!	หลีกทาง	!
-
-够不到	!	Can’t reach	!	เอื้อมมือไปไม่ถึง	!	เอื้อมมือไปไม่ถึง	!	เอื้อมมือไปไม่ถึง	!	เอื้อมมือไปไม่ถึง	!	เอื้อมมือไปไม่ถึง	!
-
-错误，失误	!	Mistake, error	!	ผิดพลาด	!	ผิดพลาด	!	ผิดพลาด	!	ผิดพลาด	!	ผิดพลาด	!
-
-不礼貌的事	!	Impolite things	!	สิ่งที่ไม่สุภาพ	!	สิ่งที่ไม่สุภาพ	!	สิ่งที่ไม่สุภาพ	!	สิ่งที่ไม่สุภาพ	!	สิ่งที่ไม่สุภาพ	!
-
-不礼貌的话	!	Impolite words	!	คําที่ไม่สุภาพ	!	คําที่ไม่สุภาพ	!	คําที่ไม่สุภาพ	!	คําที่ไม่สุภาพ	!	คําที่ไม่สุภาพ	!
-
-冒犯，侵犯	!	Offend, violate	!	ล่วงเกิน	!	ล่วงเกิน	!	ล่วงเกิน	!	ล่วงเกิน	!	ล่วงเกิน	!
-
-挤进去，穿过	!	Push through, squeeze in	!	แหวกเข้าไป	!	แหวกเข้าไป	!	แหวกเข้าไป	!	แหวกเข้าไป	!	แหวกเข้าไป	!
-
-赠品，礼品	!	Complimentary gift, freebie	!	ของสมนาคุณ	!	ของสมนาคุณ	!	ของสมนาคุณ	!	ของสมนาคุณ	!	ของสมนาคุณ	!
-
-遭遇，经历	!	Experience, encounter	!	ประสบ	!	ประสบ	!	ประสบ	!	ประสบ	!	ประสบ	!
-
-以友善和好客之心	!	With kindness and hospitality	!	ด้วยอัธยาศัยไมตรี	!	ด้วยอัธยาศัยไมตรี	!	ด้วยอัธยาศัยไมตรี	!	ด้วยอัธยาศัยไมตรี	!	ด้วยอัธยาศัยไมตรี	!
-
-正式的，礼仪性的	!	Formal, ceremonial	!	เป็นพิธีการ	!	เป็นพิธีการ	!	เป็นพิธีการ	!	เป็นพิธีการ	!	เป็นพิธีการ	!
-
-公司	!	Company, firm	!	บริษัท	!	บริษัท	!	บริษัท	!	บริษัท	!	บริษัท	!
-
-商铺，店铺	!	Shops, stores	!	ห้างร้าน	!	ห้างร้าน	!	ห้างร้าน	!	ห้างร้าน	!	ห้างร้าน	!
-
-银行	!	Bank	!	ธนาคาร	!	ธนาคาร	!	ธนาคาร	!	ธนาคาร	!	ธนาคาร	!
-
-在周年纪念日	!	On the anniversary	!	ในวาระครบรอบปี	!	ในวาระครบรอบปี	!	ในวาระครบรอบปี	!	ในวาระครบรอบปี	!	ในวาระครบรอบปี	!
-
-开办新业务	!	Start a new business	!	เริ่มเปิดกิจการใหม่	!	เริ่มเปิดกิจการใหม่	!	เริ่มเปิดกิจการใหม่	!	เริ่มเปิดกิจการใหม่	!	เริ่มเปิดกิจการใหม่	!
-
-分支，分部	!	Branch, department	!	สาขา	!	สาขา	!	สาขา	!	สาขา	!	สาขา	!
-
-遭遇事故	!	Have an accident	!	ประสบอุบัติเหตุ	!	ประสบอุบัติเหตุ	!	ประสบอุบัติเหตุ	!	ประสบอุบัติเหตุ	!	ประสบอุบัติเหตุ	!
-
-去世（正式用语）	!	Passed away (formal)	!	ถึงแก่กรรม	!	ถึงแก่กรรม	!	ถึงแก่กรรม	!	ถึงแก่กรรม	!	ถึงแก่กรรม	!
-
-慰问信	!	Condolence letter	!	จดหมายแสดงความเสียใจ	!	จดหมายแสดงความเสียใจ	!	จดหมายแสดงความเสียใจ	!	จดหมายแสดงความเสียใจ	!	จดหมายแสดงความเสียใจ	!
-
-遭受损失	!	Suffer a loss	!	เกิดความสูญเสีย	!	เกิดความสูญเสีย	!	เกิดความสูญเสีย	!	เกิดความสูญเสีย	!	เกิดความสูญเสีย	!
-
-火灾	!	Fire, blaze	!	ไฟไหม้	!	ไฟไหม้	!	ไฟไหม้	!	ไฟไหม้	!	ไฟไหม้	!
-
-事故	!	Accident	!	อุบัติเหตุ	!	อุบัติเหตุ	!	อุบัติเหตุ	!	อุบัติเหตุ	!	อุบัติเหตุ	!
-
-财产，资产	!	Property, assets	!	ทรัพย์สิน	!	ทรัพย์สิน	!	ทรัพย์สิน	!	ทรัพย์สิน	!	ทรัพย์สิน	!
-
-原因，起因	!	Cause, reason	!	สาเหตุ	!	สาเหตุ	!	สาเหตุ	!	สาเหตุ	!	สาเหตุ	!
-
-
-
+财产，资产	!	Property, assets	!	ทรัพย์สิน	!	ทรัพย์สิน	!	ทรัพย์สิน	!	ทรัพย์สิน	!
